ser tests, fixes